Fix header spacing on small screens

--- a/03-organisms/site/site-header/_site-header.scss
+++ b/03-organisms/site/site-header/_site-header.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: color('gray-300') 1px solid;
+    padding: 0;
 
     @include breakpoint($large) {
       padding: $space 0;
